<resources>
    <string name="app_name">Android Calculator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn8String">8</string>
    <string name="btn7String">7</string>
    <string name="btn9String">9</string>
    <string name="btn5String">5</string>
    <string name="btn4String">4</string>
    <string name="btn6String">6</string>
    <string name="btn1String">1</string>
    <string name="btn2String">2</string>
    <string name="btn3String">3</string>
    <string name="btn0String">0</string>
    <string name="btnClearString">C</string>
    <string name="decimalBtnString">.</string>
    <string name="plusBtnString">+</string>
    <string name="minusBtnString">-</string>
    <string name="divideBtnString">/</string>
    <string name="multiplyBtnString">*</string>
    <string name="equalButtonString">=</string>
</resources>
